# DataWhisperer

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pruebas.ipynb  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  ci.yml.disabled
dataWhisperer/: core.py  core_types.py
dataWhisperer/code_executor/: executor.py  fixer.py
dataWhisperer/llm_client/: gemini_client.py
dataWhisperer/prompt_engine/: prompt_factory.py
datawhisperer/: __init__.py  core.py  core_types.py
datawhisperer/code_executor/: executor.py  fixer.py
datawhisperer/llm_client/: gemini_client.py  openai_client.py
datawhisperer/prompt_engine/: prompt_cache.py  prompt_factory.py
tests/: conftest.py  test_chatbot.py  test_chatbot_state.py  test_executor.py  test_fixer.py  test_prompt_factory.py
