[project]
name = "datawhisperer"
version = "0.1.0"
authors = [{ name = "JosueARz" }]
description = "Natural language interface for DataFrames using LLMs"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai==0.28.0",  
    "pandas>=2.2.0",
    "plotly>=5.0.0",
    "google-generativeai>=0.8.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
